--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
 	"name": "fcc-learn-npm-package-json",
 	"author": "Manuel Maxera",
 	"description": "Node.js learning",
+	"keywords": [ "freecodecamp", "learning", "node"],
+	"license": "MIT",
+	"version": "1.0.0",
 	"dependencies": {
 		"express": "^4.14.0"
 	},
